# cs50w-project3

./: .gitignore  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: base.html  index.html
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_menusection_section_name.py  0002_rename_section_items_name.py  0003_alter_menusection_section_name.py  0003_rename_carts_cart_rename_items_item_and_more.py  0004_rename_id_type_item_item_type.py  0004_rename_menu_item_rename_menusection_itemsection.py
orders/templates/orders/: base.html  cart.html  index.html
orders/templates/registration/: base.html  login.html  register.html
pizza/: settings.py  urls.py
registration/: forms.py  urls.py  views.py
registration/templates/registration/: base.html  login.html  register.html
shopping/: admin.py  forms.py  models.py  urls.py  views.py
shopping/migrations/: 0001_initial.py  0002_alter_platesincart_cart.py  0003_platesincart_price.py  0004_alter_platesincart_price.py  0005_alter_order_price.py
shopping/templates/shopping/: base.html  cart.html  index.html  mycart.html  myorders.html
static/: body.css  staticfiles.json
templates/: layout.html
